# ITP

./: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
public/: plugins.json  tools.json
src/: main.ts  monaco-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: README.md  check_snort.sh  install.sh  install_dpdk.sh  install_snort.sh  monitoring.sh
src-tauri/src/: main.rs
src-tauri/src/db/: connection.rs
src-tauri/src/itp_sender/: mod.rs  send_ssh.rs
src/components/: Menu.vue  Welcome.vue  homepage.vue  rules.vue
src/components/network/: NetworkVisualizer.vue
src/components/pages/: Homepage.vue  Instances.vue  Modules.vue  Rules.vue  Settings.vue  Tests.vue
src/components/pages/rules/: GroupEditor.vue  RuleEditor.vue  RulesMan.vue
src/router/: index.ts
src/services/: Modules.ts  Pagination.ts  Plugin.ts
src/styles/: Menu.css  Pages.css  Welcome.css  button_sidebar.css  button_start.css
src/styles/boxes/: SnortBox.css  SnortBoxInstances.css  SnortBoxMenu.css  SnortBoxNetworkViz.css  SnortBoxRules.css  SnortBoxStore.css  pagination.css  rules_editor.css  snort_box.css  snort_popup.css
src/styles/buttons/: SnortButton.css  SnortIcon.css  menu_toggle.css  snort_button.css
src/styles/graphics/: line_plot.css
src/styles/popups/: SnortPopup_ssh.css
src/utils/: snortLanguage.ts
