[package]
name = "ITP"
version = "0.1.0"
description = "Install The Pork : a modern interface to manage your snort installation inside your network"
authors = ["archie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "install_snort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sysinfo = "0.33.1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7"
hostname = "0.3"
dotenv = "0.15"
